appId: com.tamagui.tamaguikitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Select'
- tapOn: 'Select'
- assertVisible: 'Apple'
# Test: select opens when tapped
- tapOn: 'Apple'
- assertVisible: 'Pear'
