appId: com.tamagui.tamaguikitchensink
tags:
  - component
---
- runFlow: OpenApp.yaml
- scrollUntilVisible:
    element: 'Sheet'
- tapOn: 'Sheet'
- assertVisible: 'Open'
# Test: sheet opens when button tapped
- tapOn: 'Open'
